Modified Folder.java to fix pathing issues